--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "redux-json-api-module",
   "version": "1.0.0",
   "description": "Redux reducer, actions, action creators, and selectors for interacting with JSON API.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "build": "webpack",
+    "prepublishOnly": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -28,5 +30,13 @@
     "json-api-normalizer": "^0.4.15",
     "qs": "^6.7.0",
     "redux-axios-middleware": "^4.0.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.5.5",
+    "babel-loader": "^8.0.6",
+    "webpack-cli": "^3.3.6"
   }
 }
