--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "redux-json-api-module",
   "version": "1.0.0",
   "description": "Redux reducer, actions, action creators, and selectors for interacting with JSON API.",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel src --out-dir dist",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -23,10 +24,14 @@
   },
   "homepage": "https://github.com/kp-software/redux-json-api-module#readme",
   "dependencies": {
-    "axios": "^0.19.0",
     "deepmerge": "^4.0.0",
     "json-api-normalizer": "^0.4.15",
-    "qs": "^6.7.0",
-    "redux-axios-middleware": "^4.0.1"
+    "qs": "^6.7.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "babel-loader": "^8.0.6"
   }
 }
