--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "redux-json-api-module",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Redux reducer, actions, action creators, and selectors for interacting with JSON API.",
   "main": "./dist/index.js",
+  "types": "index.t.ts",
   "scripts": {
     "build": "babel src --out-dir dist",
     "prepublish": "npm run build"
