fix(redux): mergeResult uses produce to ensure we don't mutate the immutable

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-json-api-module",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Redux reducer, actions, action creators, and selectors for interacting with JSON API.",
   "main": "./dist/index.js",
   "types": "index.t.ts",
@@ -25,14 +25,15 @@
   },
   "homepage": "https://github.com/kp-software/redux-json-api-module#readme",
   "dependencies": {
-    "deepmerge": "^4.0.0",
+    "immer": "^10.1.1",
     "json-api-normalizer": "^0.4.15",
-    "qs": "^6.7.0"
+    "qs": "^6.10.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "babel-loader": "^8.0.6"
-  }
+  },
+  "packageManager": "yarn@4.6.0+sha512.5383cc12567a95f1d668fbe762dfe0075c595b4bfff433be478dbbe24e05251a8e8c3eb992a986667c1d53b6c3a9c85b8398c35a960587fbd9fa3a0915406728"
 }
