--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "dist/index.js",
   "types": "index.d.ts",
   "scripts": {
-    "build": "babel src --out-dir dist",
-    "prepublish": "npm run build",
-    "postinstall": "npm install --only=dev && npm run build"
+    "build": "babel src --out-dir dist"
   },
   "repository": {
     "type": "git",
