--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/kp-software/redux-json-api-module#readme",
   "dependencies": {
+    "deepmerge": "^4.3.1",
     "json-api-normalizer": "^0.4.15",
     "qs": "^6.10.3"
   },
