--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/kp-software/redux-json-api-module#readme",
   "dependencies": {
     "deepmerge": "^4.3.1",
+    "immer": "^10.1.1",
     "json-api-normalizer": "^1.0.4",
     "qs": "^6.10.3"
   },
