--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "redux-json-api-module",
-  "version": "1.1.6",
+  "version": "2.0.0",
   "description": "Redux reducer, actions, action creators, and selectors for interacting with JSON API.",
   "main": "dist/index.js",
   "types": "index.d.ts",
   "scripts": {
-    "build": "babel src --out-dir dist"
+    "build": "tsc && babel src --out-dir dist"
   },
   "repository": {
     "type": "git",
@@ -25,15 +25,19 @@
   "homepage": "https://github.com/kp-software/redux-json-api-module#readme",
   "dependencies": {
     "deepmerge": "^4.3.1",
-    "immer": "^10.1.1",
     "json-api-normalizer": "^1.0.4",
-    "qs": "^6.10.3"
+    "qs": "^6.10.3",
+    "redux": "*"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
-    "babel-loader": "^8.0.6"
+    "@types/node": "^22.13.1",
+    "@types/qs": "^6.9.18",
+    "@types/redux": "^3.6.0",
+    "babel-loader": "^8.0.6",
+    "typescript": "^5.7.3"
   },
   "packageManager": "yarn@4.6.0+sha512.5383cc12567a95f1d668fbe762dfe0075c595b4bfff433be478dbbe24e05251a8e8c3eb992a986667c1d53b6c3a9c85b8398c35a960587fbd9fa3a0915406728"
 }
